--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 rozpoznawanie ukośnych układów
 
 rozpoznawanie 4 a nie 5-ciu w jednej linii
+
+poziomy układ nie jest rozpoznawany przez właściwą funkcję
