--- a/TODO
+++ b/TODO
@@ -1,15 +1,2 @@
-dodanie efektów graficznych:
-1) stworzenie planszy tytułowej na której będą opcje do wyboru:
- wybór wielkości planszy:
-   - klasyczne kólko i krzyżyk
-   - 5 symboli
-     ustawienie ilości wierszy i kolumn każda wielkość >= 5
- między kim ma się toczyć gra:
-   - 2 graczy ludzi
-     imię gracza 1, imię gracza 2
-   - gracz-kopmputer
-     imię gracza
-   - komputer-gracz
-     imię gracza
-
-dorobić przycisk zatwierdzający
+zamienić pola w klasie Plansza z listy list na słownik indeksowany
+położeniami
