trzeba poprawić alfa_beta
 Changes to be committed:
	modified:   TODO
	modified:   alfa_beta.py
	modified:   alfa_beta_test.py
	modified:   gracz.py
	modified:   gracz_komputer.py
	modified:   inteligencja.py
	modified:   ox15.py
	modified:   siatka.py
	modified:   symbole.py
	modified:   wartosciowanie.py
	modified:   wartosciowanie_test.py
	modified:   wykonaj_test.sh

--- a/TODO
+++ b/TODO
@@ -13,3 +13,6 @@ dodanie efektów graficznych:
      imię gracza
 
 dorobić przycisk zatwierdzający
+
+w alfa_beta znaleziony na samym dole ruch kop[iuje się na górę,
+nie powinno tak być
